2015-11-11  Anders Carlsson  <andersca@apple.com>

        _WKRemoteObjectInterface should handle specifying allowed classes for reply block arguments
        https://bugs.webkit.org/show_bug.cgi?id=151144

        Reviewed by Tim Horton.

        * TestWebKitAPI/Tests/WebKit2Cocoa/RemoteObjectRegistry.h:
        (remoteObjectInterface):
        * TestWebKitAPI/Tests/WebKit2Cocoa/RemoteObjectRegistry.mm:
        (TEST):
        * TestWebKitAPI/Tests/WebKit2Cocoa/RemoteObjectRegistryPlugIn.mm:
        (-[RemoteObjectRegistryPlugIn webProcessPlugIn:didCreateBrowserContextController:]):
        (-[RemoteObjectRegistryPlugIn selectionAndClickInformationForClickAtPoint:completionHandler:]):

2015-11-10  Wenson Hsieh  <wenson_hsieh@apple.com>

        UI-side scripts in WebKitTestRunner should wait until event handling completes before finishing
        https://bugs.webkit.org/show_bug.cgi?id=151101
        <rdar://problem/23428601>

        Reviewed by Simon Fraser.

        WebKitTestRunner may still crash in the scenario where a marker event is dequeued and handled
        after uiScriptComplete has been called. This patch teaches the UI script execution context to
        defer script completion until all non-persistent tasks (currently tap, double tap and hardware
        keyboard) have been handled, so marker events will no longer bleed through tests.

        We accomplish this by changing the behavior of uiScriptComplete. When calling uiScriptComplete,
        we store that a request to complete the UI-side script for the current parent callback has been
        made. Subsequently, when a callback (either persistent or non-persistent) finishes invoking and
        a request has been made to complete the UI script (this request may have been made when running
        a previous callback) we check if all the non-persistent callbacks that have the same parent
        callback as the current one have finished. If so, we complete the callback immediately;