@@ -1,3 +1,9 @@
+2015-11-11  Akos Kiss  <akiss@inf.u-szeged.hu>
+
+        Unreviewed, add myself to the committers list.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2015-11-11  Anders Carlsson  <andersca@apple.com>
 
         _WKRemoteObjectInterface should handle specifying allowed classes for reply block arguments
